--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,10 +4,10 @@
 {% block meta_description %}Bienvenue sur l'application web du Football Club de Rosheim situé dans la commune du même nom dans le Bas-Rhin
 {% endblock %}
 {% block content %}
-	<div class="container-fluid row">
+	<div class="row vertical-center">
 		<div class="col-2"></div>
 		<div class="col-8">
-			<div class="col-xl news-container flex flex-column align-items-center justify-content-lg-center full-height">
+			<div class="col-xl news-container flex flex-column align-items-center justify-content-lg-center align-self-center">
 				{% for new in news %}
 					<div class="col-10 justify-content-md-center flex align-items-center card card-news">
 						<h1 class="text-center">{{ new.title }}</h1>
