--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -654,3 +654,25 @@ figcaption h3{
 .exclusion {
     display: none;
 }
+
+/******** Scroll bar ********/
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #0c0c0c; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background:  rgba(180, 0, 0, 0.8);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #f12f37; 
+}
