--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,7 +9,7 @@
 		<div class="col-8">
 			<div class="col-xl news-container flex flex-column align-items-center justify-content-lg-center align-self-center">
 				{% for new in news %}
-					<div class="col-10 justify-content-md-center flex align-items-center card card-news">
+					<div class="col-10 justify-content-md-center flex align-items-center card card-news overflow-auto">
 						<h1 class="text-center">{{ new.title }}</h1>
                         <p>{{ new.content }}</p>
 					</div>
