fixed issue where new 2 and 3 on home page would not appear on arrow click

--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -20,7 +20,7 @@
         </thead>
         <tbody>
         {% for news in news %}
-            <tr>
+            <tr class="">
                 <td>{{ news.id }}</td>
                 <td>{{ news.title }}</td>
                 <td>{{ news.content }}</td>
