--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -1,45 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}News index{% endblock %}
+{% block title %}Liste news - FC Rosheim{% endblock %}
+{% block meta_description %}Liste des news du club FC Rosheim{% endblock %}
 
 {% block content %}
-    <h1>News index</h1>
+{# article container #}
+<div class="row vertical-center">
+    <div class="col-2"></div>
+    <div class="col-8">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>Picture</th>
-                <th>Slug</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <h1>Liste des articles</h1>
+
+    <a href="{{ path('news_new') }}">Rédiger un article</a>
+
         {% for news in news %}
-            <tr class="">
-                <td>{{ news.id }}</td>
-                <td>{{ news.title }}</td>
-                <td>{{ news.content }}</td>
+    <div></div>
+    <div class="card ">
+                <h2>{{ news.title }}</h2>
+                <p>{{ news.content }}</p>
                 <td>{{ news.picture }}</td>
-                <td>{{ news.slug }}</td>
-                <td>{{ news.createdAt ? news.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ news.updatedAt ? news.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
+                <p>Rédigé le {{ news.createdAt ? news.createdAt|date('Y-m-d H:i:s') : '' }}</p>
+                <p>Modifié le {{ news.updatedAt ? news.updatedAt|date('Y-m-d H:i:s') : '' }}</p>
+                <p>
                     <a href="{{ path('news_show', {'id': news.id}) }}">show</a>
                     <a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
-                </td>
-            </tr>
+                </p>
+    </div>
         {% else %}
             <tr>
                 <td colspan="8">no records found</td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
 
-    <a href="{{ path('news_new') }}">Create new</a>
+    <a href="{{ path('news_new') }}">Rédiger un article</a>
+
+    {# div col-8 close #}
+    </div>
+
+    <div class="col-2"></div>
+
+    {# entire content close #}
+</div>
 {% endblock %}
