--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -1,44 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste news - FC Rosheim{% endblock %}
-{% block meta_description %}Liste des news du club FC Rosheim{% endblock %}
+{% block title %}Liste news - FC Rosheim
+{% endblock %}
+{% block meta_description %}Liste des news du club FC Rosheim
+{% endblock %}
 
 {% block content %}
-{# article container #}
-<div class="row vertical-center">
-    <div class="col-2"></div>
-    <div class="col-8">
+	{# article container #}
+	<div class="row vertical-center">
+		<div class="col-2"></div>
+		<div class="col-8">
 
-    <h1>Liste des articles</h1>
+			<h1>Liste des articles</h1>
 
-    <a href="{{ path('news_new') }}">Rédiger un article</a>
+			<a href="{{ path('news_new') }}">Rédiger un article</a>
+			{% if news %}
+				{% for news in news %}
+					<div class="card container-fluid d-flex flex">
+						<h2 class="text-center">{{ news.title }}</h2>
+						<p>{{ news.content }}</p>
+						<div>{{ news.picture }}</div>
+                        <hr>
+						<p class="text-right">Rédigé le
+							{{ news.createdAt ? news.createdAt|date('Y-m-d') }} à {{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
+						<p>Modifié le
+							{{ news.createdAt ? news.createdAt|date('Y-m-d') }} à {{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
+						<p>
+							<a href="{{ path('news_show', {'id': news.id}) }}">show</a>
+							<a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
+						</p>
+					</div>
+				{% endfor %}
+			{% else %}
+				<div class="card container-fluid d-flex flex">
+					<h2 class="text-center">Il n'y a pas encore de news sur le site</h2>
+				</div>
+			{% endif %}
 
-        {% for news in news %}
-    <div></div>
-    <div class="card ">
-                <h2>{{ news.title }}</h2>
-                <p>{{ news.content }}</p>
-                <td>{{ news.picture }}</td>
-                <p>Rédigé le {{ news.createdAt ? news.createdAt|date('Y-m-d H:i:s') : '' }}</p>
-                <p>Modifié le {{ news.updatedAt ? news.updatedAt|date('Y-m-d H:i:s') : '' }}</p>
-                <p>
-                    <a href="{{ path('news_show', {'id': news.id}) }}">show</a>
-                    <a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
-                </p>
-    </div>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
+			<a href="{{ path('news_new') }}">Rédiger un article</a>
 
-    <a href="{{ path('news_new') }}">Rédiger un article</a>
+			{# div col-8 close #}
+		</div>
 
-    {# div col-8 close #}
-    </div>
+		<div class="col-2"></div>
 
-    <div class="col-2"></div>
-
-    {# entire content close #}
-</div>
+		{# entire content close #}
+	</div>
 {% endblock %}
