added error display

--- a/templates/admin/players_edit.html.twig
+++ b/templates/admin/players_edit.html.twig
@@ -34,6 +34,7 @@
                                 <th>Numéro</th>
                                 <td>
                                     {{ form_widget(form.number) }}
+                                    {{ form_errors(form.number) }}
                                 </td>
                             </tr>
                             <tr>
@@ -58,6 +59,7 @@
                                 <th>Photo</th>
                                 <td>
                                     {{ form_widget(form.picture) }}
+                                    {{ form_errors(form.picture) }}
                                 </td>
                             </tr>
                             <tr>
