--- a/templates/admin/news_new.html.twig
+++ b/templates/admin/news_new.html.twig
@@ -18,6 +18,7 @@
                                 <th>Titre</th>
                                 <td>
                                     {{ form_widget(form.title) }}
+                                    {{ form_errors(form.title) }}
                                 </td>
                             </tr>
                             <tr>
@@ -42,12 +43,14 @@
                                 <th>Contenu</th>
                                 <td>
                                     {{ form_widget(form.content) }}
+                                    {{ form_errors(form.content) }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>Image</th>
                                 <td>
                                     {{ form_widget(form.picture) }}
+                                    {{ form_errors(form.picture) }}
                                 </td>
                             </tr>
                             <tr hidden>
