--- a/templates/admin/staff_new.html.twig
+++ b/templates/admin/staff_new.html.twig
@@ -30,12 +30,14 @@
                                 <th>E-mail</th>
                                 <td id="staff_email">
                                     {{ form_widget(form.email) }}
+                                    {{ form_errors(form.email) }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>Telephone</th>
                                 <td id="staff_phone">
                                     {{ form_widget(form.phone) }}
+                                    {{ form_errors(form.phone) }}
                                 </td>
                             </tr>
                             <tr>
@@ -54,6 +56,7 @@
                                 <th>Photo</th>
                                 <td>
                                     {{ form_widget(form.picture) }}
+                                    {{ form_errors(form.picture) }}
                                 </td>
                             </tr>
                         </tbody>
