forgot about that error teehee

--- a/templates/admin/teams_edit.html.twig
+++ b/templates/admin/teams_edit.html.twig
@@ -28,6 +28,7 @@
                                 <th>Saison</th>
                                 <td>
                                     {{ form_widget(form.season) }}
+                                    {{ form_errors(form.season) }}
                                 </td>
                             </tr>
                             <tr>
