--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,6 +9,18 @@ body {
     padding-top: 9em;
 }
 
+a {
+    color: #f12f37;
+}
+
+a:hover {
+    color: whitesmoke;
+}
+
+.date-time {
+    font-style: italic;
+}
+
 /******** reset nav z-index ********/
 .fixed-top {
     z-index: 2;
@@ -140,10 +152,10 @@ span.leftbar {
     margin-bottom: 0;
 }
 .card a {
-    color: rgba(255, 0, 0, 0.8);
+    color: #f12f37;
 }
 .card a:hover {
-    color: rgba(200, 0, 0, 0.8);
+    color: whitesmoke;
 }
 .card button{
     border-radius: 0;
@@ -687,4 +699,55 @@ figcaption h3{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #f12f37;
+}
+
+/******** CRUD ********/
+
+.crud-btn {
+    border: solid 1px rgba(180, 0, 0, 0.8);
+    background-color: #0c0c0c; 
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    text-decoration: none !important;
+}
+.crud-btn a {
+    text-decoration: none;
+}
+
+.delete-btn {
+    background-color: rgba(180, 0, 0, 0.8); 
+    border: solid 1px rgba(180, 0, 0, 0.8);
+    color: whitesmoke !important;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.crud-btn:hover{
+    color: whitesmoke !important;
+    background-color: rgba(90, 0, 0, 0.8); 
+    transition: all 0.1s, ease-in-out;
+    -webkit-transition: all 0.1s ease-in-out;
+}
+
+.delete-btn:hover{
+    /* color: #0c0c0c !important; */
+    background-color: rgba(90, 0, 0, 0.8); 
+    transition: all 0.1s, ease-in-out;
+    -webkit-transition: all 0.1s ease-in-out;
+}
+
+@media only screen and (max-width: 620px) {
+    .btn-container {
+        flex-direction: column;
+    }
+    .delete-btn_small-screen {
+        width: -webkit-fill-available !important;
+        width: 100% !important;
+    }
 }
