--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -16,19 +16,38 @@
 			<a href="{{ path('news_new') }}">Rédiger un article</a>
 			{% if news %}
 				{% for news in news %}
-					<div class="card container-fluid d-flex flex">
-						<h2 class="text-center">{{ news.title }}</h2>
+				{# article content #}
+					<div class="card container-fluid d-flex flex mb-3">
+					{# title #}
+						<h2 class="text-center mb-3">{{ news.title }}</h2>
+						{# core content #}
 						<p>{{ news.content }}</p>
 						<div>{{ news.picture }}</div>
-                        <hr>
+						{# date #}
+						<div class="row my-3 justify-content-end flex d-flex align-items-end">
+						<div class=" my-3 justify-content-end flex d-flex align-items-end">
 						<p class="text-right">Rédigé le
-							{{ news.createdAt ? news.createdAt|date('Y-m-d') }} à {{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
+							{{ news.createdAt ? news.createdAt|date('Y-m-d') }}
+							à
+							{{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
+						</div>
+						{# <div class=" my-3 justify-content-end flex d-flex align-items-end">
 						<p>Modifié le
-							{{ news.createdAt ? news.createdAt|date('Y-m-d') }} à {{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
-						<p>
-							<a href="{{ path('news_show', {'id': news.id}) }}">show</a>
-							<a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
-						</p>
+							{{ news.createdAt ? news.createdAt|date('Y-m-d') }}
+							à
+							{{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
+						</div> #}
+						</div>
+						{# button #}
+						<div class="col d-flex justify-content-center">
+							<button class="crud-btn">
+								<a href="{{ path('news_show', {'id': news.id}) }}">show</a>
+							</button>
+							<button class="crud-btn">
+								<a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
+							</button>
+						</div>
+						{# button end #}
 					</div>
 				{% endfor %}
 			{% else %}
