--- a/templates/admin/players_edit.html.twig
+++ b/templates/admin/players_edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Mon profil - FC Rosheim{% endblock %}
+{% block title %}{{ include('admin/_title.html.twig') }}{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
