--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,9 +19,14 @@
         <div class="col-md-1">
         {{ include ("include/_externalLinks.html.twig") }}
         </div>
+        {# <div class="row">
+		<div class="col-2"></div>
+		<div class="col-8"> #}
         {% block content %}
         {% endblock %}
-        </div>
+        {# </div>
+		<div class="col-2"></div>
+        </div> #}
     </body>
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
