--- a/templates/player/new.html.twig
+++ b/templates/player/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('player/_form.html.twig') }}
 
-    <a href="{{ path('player_index') }}">back to list</a>
+    <a href="{{ path('team_index') }}">back to list</a>
 {% endblock %}
