--- a/templates/include/_header.html.twig
+++ b/templates/include/_header.html.twig
@@ -21,7 +21,7 @@
 						<span class="leftbar"></span>Équipes</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="/game" class="nav-link">
 						<span class="leftbar"></span>Résultats</a>
 				</li>
 				<li class="nav-item">
