--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -1,43 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Game index{% endblock %}
+{% block title %}Liste des matchs - FC Rosheim{% endblock %}
+{% block meta_description %}Liste des matchs du FC Rosheim{% endblock %}
 
 {% block content %}
-    <h1>Game index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Opponent</th>
-                <th>ScoreTeam</th>
-                <th>ScoreOpponent</th>
-                <th>GameDate</th>
-                <th>Home</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for game in games %}
-            <tr>
-                <td>{{ game.id }}</td>
-                <td>{{ game.opponent }}</td>
-                <td>{{ game.scoreTeam }}</td>
-                <td>{{ game.scoreOpponent }}</td>
-                <td>{{ game.gameDate ? game.gameDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ game.home ? 'Yes' : 'No' }}</td>
+    <h1>Matchs passés</h1>
+        {% for passedGame in passedGames %}
+            {% if passedGame.home == 1 %}
+                <div class="flex">
+                    <h3>{{passedGame.team.teamName}} 
+                        <span class="{{(passedGame.scoreTeam < passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreTeam }} </span> - 
+                        <span class="{{(passedGame.scoreTeam > passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreOpponent }}</span>
+                        {{passedGame.opponent}}
+                    </h3>
+                </div>
+            {% endif %}
+                <td>{{ passedGame.scoreOpponent }}</td>
+                <td>{{ passedGame.gameDate ? passedGame.gameDate|date('Y-m-d H:i') : '' }}</td>
+                <td>{{ passedGame.home ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('game_show', {'id': game.id}) }}">show</a>
-                    <a href="{{ path('game_edit', {'id': game.id}) }}">edit</a>
-                </td>
-            </tr>
+                    <a href="{{ path('game_show', {'id': passedGame.id}) }}">show</a>
+                    <a href="{{ path('game_edit', {'id': passedGame.id}) }}">edit</a>
         {% else %}
-            <tr>
                 <td colspan="7">no records found</td>
-            </tr>
         {% endfor %}
-        </tbody>
-    </table>
 
     <a href="{{ path('game_new') }}">Create new</a>
 {% endblock %}
