--- a/templates/include/_down_arrow.html.twig
+++ b/templates/include/_down_arrow.html.twig
@@ -1,6 +1,5 @@
 {% block downarrow %}
     <div class="d-flex flex-column align-items-center">
-    <div class="mt-auto">
     <svg id="down_arrow" class"" data-name="down_arrow" xmlns="http://www.w3.org/2000/svg" 
     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 85 53" width="5rem" height="5rem"><defs><style>
     .cls-1{fill:#fff;opacity:0.5;}</style></defs><image width="85" height="53" 
@@ -40,5 +39,5 @@
     ToyJ8AAAAASUVORK5CYII="/><path class="cls-1" d="M38.72,42.49,9.49,13.26a2.69
     ,2.69,0,0,1,0-3.82h0a2.69,2.69,0,0,1,3.82,0,41.3,41.3,0,0,0,58.39,0,2.7,2.7,
     0,0,1,3.82,3.82L46.29,42.49a5.35,5.35,0,0,1-7.57,0"/></svg>
-    </div></div>
+    </div>
 {% endblock %}
