--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 	{# article container #}
-	<div class="row vertical-center">
+	<div class="row">
 		<div class="col-2"></div>
 		<div class="col-8">
 
@@ -26,7 +26,7 @@
 						{# date #}
 						<div class="row my-3 justify-content-end flex d-flex align-items-end">
 						<div class=" my-3 justify-content-end flex d-flex align-items-end">
-						<p class="text-right">Rédigé le
+						<p class="text-right font-italic date-time">Rédigé le
 							{{ news.createdAt ? news.createdAt|date('Y-m-d') }}
 							à
 							{{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p>
