--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -105,6 +105,11 @@
                     {% endfor %}
                 </div>
             </div>
+            <div class="mt-3">
+                <div class="btn-container d-flex justify-content-between">
+	                <a class="crud-btn" href="{{ path('team_index') }}">back to list</a>
+                </div>
+            </div>
         </main>
     </div>
 </div>
