--- a/templates/news/_delete_form.html.twig
+++ b/templates/news/_delete_form.html.twig
@@ -1,6 +1,7 @@
 <div class="">
-<form method="post" action="{{ path('news_delete', {'id': news.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('news_delete', {'id': news.id}) }}"
+      onsubmit="return confirm('Êtes-vous sûr·e de vouloir supprimer cette news ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ news.id) }}">
-    <button class="delete-btn delete-btn_small-screen">Delete</button>
+    <button class="delete-btn delete-btn_small-screen">Supprimer</button>
 </form>
 </div>
