--- a/templates/news/edit.html.twig
+++ b/templates/news/edit.html.twig
@@ -3,11 +3,20 @@
 {% block title %}Edit News{% endblock %}
 
 {% block content %}
-    <h1>Edit News</h1>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
 
-    {{ include('news/_form.html.twig', {'button_label': 'Update'}) }}
+            <h1>Créer une nouvelle News</h1>
+            <div class="card container-fluid d-flex flex mb-3">
+                {{ include('news/_form.html.twig') }}
+                {{ include('news/_delete_form.html.twig') }}
+            </div>
 
-    <a href="{{ path('news_index') }}">back to list</a>
+            <a href="{{ path('news_index') }}">back to list</a>
 
-    {{ include('news/_delete_form.html.twig') }}
+        </div>
+    </div>
+    <div class="col-2"></div>
+
 {% endblock %}
