--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -40,19 +40,23 @@
 						</div>
 						{# button #}
 						<div class="col d-flex justify-content-center">
-							<button class="crud-btn">
-								<a href="{{ path('news_show', {'id': news.id}) }}">show</a>
-							</button>
-							<button class="crud-btn">
-								<a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
-							</button>
+							<a href="{{ path('news_show', {'id': news.id}) }}">
+								<button class="crud-btn">
+									show
+								</button>
+							</a>
+							<a href="{{ path('news_edit', {'id': news.id}) }}">
+								<button class="crud-btn">
+									edit
+								</button>
+							</a>
 						</div>
 						{# button end #}
 					</div>
 				{% endfor %}
 			{% else %}
 				<div class="card container-fluid d-flex flex">
-					<h2 class="text-center">Il n'y a pas encore de news sur le site</h2>
+					<h2 class="text-center">Il n'y a pas encore de news sur le site.</h2>
 				</div>
 			{% endif %}
 
