--- a/templates/game/edit.html.twig
+++ b/templates/game/edit.html.twig
@@ -1,13 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Game{% endblock %}
+{% block title %}Edition - FC Rosheim{% endblock %}
 
 {% block content %}
-    <h1>Edit Game</h1>
-
-    {{ include('game/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('game_index') }}">back to list</a>
-
-    {{ include('game/_delete_form.html.twig') }}
+    <div class="container-fluid">
+        <a href="{{ path('team_index') }}">Revenir en arrière</a>
+        <div class="row justify-content-md-center full-height flex align-items-center">
+            <div class="col-md-4 justify-content-md-center card">
+                <h1>Modifier</h1>
+                <span class="redline"></span>
+                    {{ include('game/_form.html.twig', {'button_label': 'Mettre à jour le match'}) }}
+                    <span class="redline"></span>
+                    {{ include('game/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
