--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -4,26 +4,75 @@
 {% block meta_description %}Liste des matchs du FC Rosheim{% endblock %}
 
 {% block content %}
-    <h1>Matchs passés</h1>
-        {% for passedGame in passedGames %}
-            {% if passedGame.home == 1 %}
-                <div class="flex">
-                    <h3>{{passedGame.team.teamName}} 
-                        <span class="{{(passedGame.scoreTeam < passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreTeam }} </span> - 
-                        <span class="{{(passedGame.scoreTeam > passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreOpponent }}</span>
-                        {{passedGame.opponent}}
-                    </h3>
+    <main class="card col-md-6 container">
+        {% if is_granted("ROLE_ADMIN") %}
+            <a class="crud-btn" href="{{ path('game_new') }}">Nouveau match</a>
+            <span class="redline-player"></span>
+        {% endif %}
+        {####################### Matchs à venir ##########################}
+        <h1>Matchs à venir</h1>
+        <span class="redline"></span>
+        {% for upcomingGame in upcomingGames %}
+            <a class="link-no-style" href="{{ path('game_show', {'id': upcomingGame.id}) }}">
+                <div class="card col-md-12 text-center">
+                    {% if upcomingGame.home == 1 %}
+                        <h4>{{ upcomingGame.gameDate ? upcomingGame.gameDate|date('d/m/Y H:i') : '' }}</h4>
+                        <div class="text-center">
+                            <h3>{{upcomingGame.team.teamName}} 
+                                <span class="{{(upcomingGame.scoreTeam < upcomingGame.scoreOpponent) ? 'loose' : 'win'}}">{{ upcomingGame.scoreTeam }} </span> - 
+                                <span class="{{(upcomingGame.scoreTeam > upcomingGame.scoreOpponent) ? 'loose' : 'win'}}">{{ upcomingGame.scoreOpponent }}</span>
+                                {{upcomingGame.opponent}}
+                            </h3>
+                        </div>
+                    {% else %}
+                        <h4>{{ upcomingGame.gameDate ? upcomingGame.gameDate|date('d/m/Y H:i') : '' }}</h4>
+                        <div class="text-center">
+                            <h3>{{upcomingGame.opponent}}
+                                <span class="{{(upcomingGame.scoreTeam > upcomingGame.scoreOpponent) ? 'loose' : 'win'}}">{{ upcomingGame.scoreOpponent }}</span> - 
+                                <span class="{{(upcomingGame.scoreTeam < upcomingGame.scoreOpponent) ? 'loose' : 'win'}}">{{ upcomingGame.scoreTeam }} </span>
+                                {{upcomingGame.team.teamName}} 
+                            </h3>
+                        </div>
+                    {% endif %}
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <a class="btn btn-primary" href="{{ path('game_edit', {'id': upcomingGame.id}) }}">Modifier</a>
+                    {% endif %}
                 </div>
-            {% endif %}
-                <td>{{ passedGame.scoreOpponent }}</td>
-                <td>{{ passedGame.gameDate ? passedGame.gameDate|date('Y-m-d H:i') : '' }}</td>
-                <td>{{ passedGame.home ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('game_show', {'id': passedGame.id}) }}">show</a>
-                    <a href="{{ path('game_edit', {'id': passedGame.id}) }}">edit</a>
+            </a>
         {% else %}
-                <td colspan="7">no records found</td>
+            Pas de matchs enregistrés
         {% endfor %}
-
-    <a href="{{ path('game_new') }}">Create new</a>
+        {####################### Matchs passés ##########################}
+        <h1>Matchs passés</h1>
+        <span class="redline"></span>
+        {% for passedGame in passedGames %}
+                <a class="link-no-style" href="{{ path('game_show', {'id': passedGame.id}) }}">
+                    <div class="card col-md-12 text-center">
+                        {% if passedGame.home == 1 %}
+                            <h4>{{ passedGame.gameDate ? passedGame.gameDate|date('d/m/Y H:i') : '' }}</h4>
+                            <div class="text-center">
+                                <h3>{{passedGame.team.teamName}} 
+                                    <span class="{{(passedGame.scoreTeam <= passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreTeam }} </span> - 
+                                    <span class="{{(passedGame.scoreTeam >= passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreOpponent }}</span>
+                                    {{passedGame.opponent}}
+                                </h3>
+                            </div>
+                        {% else %}
+                        <h4>{{ passedGame.gameDate ? passedGame.gameDate|date('d/m/Y H:i') : '' }}</h4>
+                        <div class="text-center">
+                            <h3>{{passedGame.opponent}}
+                                <span class="{{(passedGame.scoreTeam >= passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreOpponent }}</span> - 
+                                <span class="{{(passedGame.scoreTeam <= passedGame.scoreOpponent) ? 'loose' : 'win'}}">{{ passedGame.scoreTeam }} </span>
+                                {{passedGame.team.teamName}} 
+                            </h3>
+                        </div>
+                        {% endif %}     
+                        {% if is_granted("ROLE_ADMIN") %}
+                            <a class="btn btn-primary" href="{{ path('game_edit', {'id': passedGame.id}) }}">Modifier</a>
+                        {% endif %}
+                    </div>
+                </a>    
+        {% else %}
+            Pas de matchs enregistrés
+        {% endfor %}
 {% endblock %}
