--- a/templates/admin/staff_edit.html.twig
+++ b/templates/admin/staff_edit.html.twig
@@ -58,7 +58,7 @@
                             </tr>
                             <tr>
                                 <th>Photo</th>
-                                <td>>
+                                <td id="staff_photo">
                                     {{ form_widget(form.picture) }}
                                     {{ form_errors(form.picture) }}
                                 </td>
