--- a/templates/admin/results_new.html.twig
+++ b/templates/admin/results_new.html.twig
@@ -10,7 +10,7 @@
         <main class="col-md-8 full-height">
             {{ include('include/admin/_admin_title.html.twig') }}
                 <div class="card admin">
-                <h1 class="display-2">Gestion des Résultats</h1>
+                <h1 class="display-2">Nouveau match</h1>
                     {{ form_start(form, {attr: {class: 'form-user-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
@@ -59,18 +59,13 @@
                         </tbody>
                     </table>
                         <button class='btn btn-primary' id='admin_save_button' type="submit">Sauvegarder</button>
-                        <button id="admin_delete_button" class="btn btn-outline-warning" form="delete_form">Supprimer</button>
                 {{ form_end(form) }}
-                    <form id="delete_form" method="post" action="{{ path('admin_results_delete', {id: game.id}) }}">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ game.id) }}">
-                    </form>
                 </div>
         </main>
     </div>
 </div>
 {% block javascripts %}
     {{ parent() }}
-    {{ include('include/admin/_admin_js.html.twig') }}
+    {{ encore_entry_script_tags('adminLeaveWarning') }}
 {% endblock %}
 {% endblock content %}
